# License-Plate-Recognition

./: README.md
0_car_train/: readme.txt
0_licence_plate_train/: readme
test/: CMakeLists.txt
test/src/: cascade_car_test.cpp  change_img.cpp
tool/: change_img  normalized_pos.sh  start_train.sh
train_cascade/: car_cascade.xml  plate_cascade.xml
